# pinfo

./: .gitignore  AUTHORS.md  README.md  meson.build
doc/: NEWS  TECHSTUFF  meson.build  pinfo.1  pinfo.texi  version.texi.in
po/: LINGUAS  meson.build
src/: colors.c  colors.h  common_includes.h  datatypes.c  datatypes.h  filehandling_functions.c  filehandling_functions.h  initializelinks.c  initializelinks.h  keyboard.h  localestuff.h  mainfunction.c  mainfunction.h  manual.c  manual.h  menu_and_note_utils.c  menu_and_note_utils.h  meson.build  parse_config.c  parse_config.h  pinfo.c  pinforc  printinfo.c  printinfo.h  readlinewrapper.c  readlinewrapper.h  regexp_search.c  regexp_search.h  signal_handler.c  signal_handler.h  snprintf.c  utils.c  utils.h  video.c  video.h
